--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,8 @@
     <ion-buttons slot="start">
       <ion-back-button text="Volver" defaultHref="/inicio"></ion-back-button>
     </ion-buttons>
-    <ion-title text-capitalize>{{title}}</ion-title>
+    <div text-center>
+      <ion-title slot="center" text-capitalize>{{title}}</ion-title>
+    </div>  
   </ion-toolbar>
 </ion-header>
