--- a/src/app/pages/botones/botones.page.html
+++ b/src/app/pages/botones/botones.page.html
@@ -27,4 +27,36 @@
 
 <ion-content>
 
+  <ion-button size="small" expand="full"> Small </ion-button>
+  <ion-button size="default" expand="full"> Default </ion-button>
+  <ion-button size="large" expand="full"> Large </ion-button>
+
+  <!-- ROUTERING -->
+  <ion-button class="top-20"
+              expand="full" 
+              routerLink="/alert"
+              color="tertiary">
+              Go to Alert
+  </ion-button>
+
+  <!-- ion-row + ion-col -->
+  <ion-row>
+    <ion-col >
+      <ion-button expand="full" routerLink="/avatar" color="tertiary">
+        Go to Avatar
+      </ion-button>        
+    </ion-col>
+    <ion-col>
+      <ion-button expand="full" routerLink="/action-sheet" color="tertiary">
+          Go to Action sheet  
+      </ion-button>    
+    </ion-col>
+  </ion-row>
+
+  <!-- fill -->
+
+  <ion-button class="top-20" fill="clear">Clear</ion-button>
+  <ion-button class="top-20" fill="outline">Outline</ion-button>
+  <ion-button class="top-20" fill="solid">Solid</ion-button>
+
 </ion-content>
